fixed alignment of h1 in header

--- a/css/style-media.css
+++ b/css/style-media.css
@@ -46,7 +46,6 @@ nav li a:hover {
 
 header h1{
   font-size: 3em;
-  top:60%;
 }
 
 h2{
